Fix homepage icon vertical alignment
Add vertical-align: middle to all open__icon-i elements so WhiteSur
span icons align consistently with each other.

--- a/packages/core/app/styles/areas/_open.scss
+++ b/packages/core/app/styles/areas/_open.scss
@@ -38,6 +38,7 @@
         }
         &-i {
             font-size: 4em;
+            vertical-align: middle;
             &--ws-lock {
                 display: inline-block;
                 width: 64px;
